<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_group_profile">

        <EditTextPreference
            android:defaultValue="@string/default_your_name"
            android:key="@string/pref_title_name"
            android:summary="@string/default_your_name"
            android:title="@string/pref_title_name" />

        <EditTextPreference
            android:defaultValue="@string/default_your_shopName"
            android:key="@string/pref_title_shopName"
            android:summary="@string/default_your_shopName"
            android:title="@string/pref_title_shopName" />

        <EditTextPreference
            android:defaultValue="@string/default_your_email"
            android:key="@string/pref_title_email"
            android:summary="@string/default_your_email"
            android:title="@string/pref_title_email" />

        <EditTextPreference
            android:defaultValue="@string/default_your_phone"
            android:inputType="phone"
            android:key="@string/pref_title_phone"
            android:summary="@string/default_your_phone"
            android:title="@string/pref_title_phone" />

        <EditTextPreference
            android:defaultValue="@string/default_your_NID"
            android:key="@string/pref_title_NID"
            android:summary="@string/default_your_NID"
            android:title="@string/pref_title_NID" />

        <EditTextPreference
            android:defaultValue="@string/default_your_shopAddress"
            android:key="@string/pref_title_shopAddress"
            android:summary="@string/default_your_shopAddress"
            android:title="@string/pref_title_shopAddress" />



    </PreferenceCategory>

</PreferenceScreen>
